Fixed CSS overflow issue

--- a/styles/globals.css
+++ b/styles/globals.css
@@ -21,17 +21,17 @@ body {
   flex-shrink: 0;
 }
 
-ul {
+ul.resolutio {
   list-style: none;
   padding: 0;
   margin: 0;
 }
 
-ul li {
+ul.resolutio li {
   list-style: none;
 }
 
-ul li::before {
+ul.resolutio li::before {
   /* Unicode for a bullet */
   content: "\2022";
   /* Styles for Indentation*/
